--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -20,7 +20,11 @@
         <td>Room Number</td>
         <td>Guest</td>
     </tr>
-
+	<tr th:each="roomReservation: ${roomReservations}">
+		<td th:text="${roomReservation.roomName}">Room Name</td>
+		<td th:text="${roomReservation.roomNumber}">Room Number</td>
+		<td th:text="${roomReservation.lastName} + ',' + ${roomReservation.firstName}">Full Name</td>
+	</tr>
 </table>
 
 <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
