--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Landon Reservations</title>
+    <title>Hotel Reservations</title>
 
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/ui-darkness/jquery-ui.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="reservations">Landon Hotels - Reservations</a>
+            <a class="navbar-brand" href="reservations">Hotels - Reservations</a>
         </div>
     </div>
 </nav>
@@ -50,7 +50,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4"></div>
-            <div class="col-md-4"><p class="text-muted">@Copyright 2017 Frank Moley</p></div>
+            <div class="col-md-4"><p class="text-muted">@Copyright 2017 Fatos Morina</p></div>
         </div>
     </div>
 </footer>
